# python-for-data-science

array/ex00/: give_bmi.py  tester.py
array/ex01/:  tester.py  array2D.py  tester.py
array/ex02/: load_image.py  tester.py
array/ex03/: docs  load_image.py  zoom.py
array/ex04/: load_image.py  rotate.py
array/ex05/: pimp_image.py
dataTable/ex00/: load_csv.py
dataTable/ex01/: aff_life.py
dataTable/ex02/: aff_pop.py  load_csv.py
dataTable/ex03/: load_csv.py  projection_life.py
starting/ex00/: Hello.py
starting/ex01/: format_ft_time.py
starting/ex02/: find_ft_type.py
starting/ex03/: NULL_not_found.py  tester.py
starting/ex04/: whatis.py
starting/ex05/: building.py
starting/ex06/: filterstring.py  ft_filter.py
starting/ex07/: sos.py
starting/ex08/: Loading.py
starting/ex09/: README.md  setup.cfg  setup.py  test_ft_package.py
starting/ex09/ft_package/: __init__.py  count.py
